# TaskMan

./: .coveragerc  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  about.md  backup.sh  build.sh  docker-compose.yml  git_diff.txt  pyproject.toml  setup.cfg  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: abo-check-task-manager.yml  abo-check.yml  ci-check-deploy.yml  deploy-staging.yml
.well-known/: assetlinks.json
locale/ru/LC_MESSAGES/: django.po
scripts/: translate_po.py
static/: manifest.json  offline.html
static/css/: custom.css  markdown-editor.css  theme-overrides.css
static/js/: markdown-toolbar.js  sw.js  theme-toggle.js
task_manager/: context_processors.py  forms.py  limit_service.py  limits.py  permissions.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_initial.py  0002_label_creator.py  0003_alter_label_creator.py  0003_alter_label_name.py  0004_alter_label_name.py  0005_alter_label_name.py
task_manager/locale/: django.po
task_manager/management/commands/: cleanup_notifications.py  createsu.py
task_manager/middleware/: real_ip_middleware.py  team_middleware.py
task_manager/notes/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/notes/migrations/: 0001_initial.py  0002_alter_note_content_alter_note_title.py
task_manager/notifications/: admin.py  apps.py  context_processors.py  models.py  services.py  urls.py  views.py
task_manager/notifications/migrations/: 0001_initial.py  0002_notification_message_key_notification_message_params_and_more.py  0003_alter_notification_message_key.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_status_name_statuses_name.py  0003_alter_status_creator.py  0003_alter_status_description.py  0003_rename_statuses_statuse.py  0004_alter_status_description.py  0004_rename_statuse_status.py  0005_status_color.py  0005_status_creator.py  0006_alter_status_name.py  0007_alter_status_name.py  0008_status_description.py  0009_alter_status_created_at_alter_status_description_and_more.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  (+9 more)
task_manager/teams/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/templates/: base.html  feedback.html  index.html  login.html  manifest.json  privacy_policy.html  sw.js  terms_of_service.html
task_manager/user/: admin.py  forms.py  models.py  urls.py  views.py
tests/: test_admin.py  test_checklist.py  test_concurrent_login.py  test_context_processors.py  test_create_superuser.py  test_feedback.py  test_filter.py  test_forms.py  test_index.py  test_labels.py  test_language.py  test_limits.py  test_login_logout.py  test_main_views.py  test_notes.py  test_notifications.py  test_pending_users.py  test_permissions.py  test_real_ip_middleware.py  test_soft_delete_edge_cases.py  test_sorting.py  test_statuses.py  test_tasks.py  test_team_form.py  test_team_invites.py  test_team_middleware.py  test_teams.py  test_trigger_error.py  test_urls.py  test_users.py
tests/fixtures/: new_test_user.json  test_labels.json  test_statuses.json  test_tasks.json  test_teams.json  test_teams_memberships.json  test_users.json  test_users.py
(+67 files in other folders)
