[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Web task management system"
authors = ["Andrey Bogatyrev <t2way@yandex.ru>"]
readme = "README.md"
homepage = "https://task-manager-wh08.onrender.com/"
repository = "https://github.com/Onoiro/python-project-52"
packages = [{include = "task_manager"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Environment :: Web Environment",
    "Framework :: Django::4.2",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Groupware"
]

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2.7"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
django-bootstrap5 = "^23.3"
django-modeltranslation = "^0.18.11"
whitenoise = "^6.6.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
django-filter = "^24.2"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
