[tool.poetry]
name = "TaskMan"
version = "1.1.0"
description = "Web task management system"
authors = ["Andrey Bogatyrev <donoriono@gmail.com>"]
readme = "README.md"
homepage = "https://taskman.2-way.ru"
repository = "https://github.com/Onoiro/taskman"
packages = [{include = "task_manager"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Environment :: Web Environment",
    "Framework :: Django :: 4.2",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Groupware"
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.0"
django-bootstrap5 = "^23.3"
django-modeltranslation = "^0.18.11"
whitenoise = "^6.6.0"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.9"
django-filter = "^24.2"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
