[tool.poetry]
name = "TaskMan"
version = "2.27.6"

description = "Web task management system"
authors = ["Andrey Bogatyrev <donoriono@gmail.com>"]
readme = "README.md"
homepage = "https://taskman.tech"
repository = "https://github.com/Onoiro/TaskMan"
packages = [{include = "task_manager"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Environment :: Web Environment",
    "Framework :: Django :: 6.0",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Natural Language :: Tajik",
    "Natural Language :: Azerbaijani",
    "Natural Language :: Kirghiz",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Groupware"
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
gunicorn = "^26.0.0"
python-dotenv = "^1.2.2"
django-bootstrap5 = "^26.2"
django-modeltranslation = "^0.20.3"
whitenoise = "^6.12.0"
dj-database-url = "^3.1.2"
psycopg2-binary = "^2.9.12"
django-filter = "^25.2"
rollbar = "^1.3.0"
certifi = "^2026.4.22"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
coverage = "^7.14.0"
django-debug-toolbar = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
